finish file upload